tests/parser/bug_74/invalid_1.m
% (c) Copyright 2020 Florian Schanda

function [a, b, ] = potato()
   a = 1;
   b = 2;
end
